--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,34 @@ wheel
 PyQt5==5.14.1
 pyqtgraph==0.10.0
 dataclasses; python_version<="3.6"
-qdarkstyle
-requests
-websocket-client
-peewee
+qdarkstyle~=2.8
+requests~=2.22.0
+websocket-client~=0.57.0
+peewee~=3.13.3
 pymysql
 psycopg2
-mongoengine
-numpy
-pandas==0.24.2
-matplotlib
+mongoengine~=0.20.0
+numpy~=1.18.1
+pandas~=1.0.1
+matplotlib~=3.1.3
 seaborn
 futu-api
 tigeropen
-rqdatac
+rqdatac~=2.9.13
 ta-lib
 ibapi
-deap
-pyzmq
+deap~=1.3.1
+pyzmq~=18.1.1
 wmi
 QScintilla==2.11.4
-plotly
+plotly~=4.11.0
 quickfix
+cython~=0.29.15
+pytz~=2019.3
+tzlocal~=2.1
+scipy~=1.4.1
+zlib~=1.2.11
+statsmodels~=0.11.0
+setuptools~=45.2.0
+
+talib
